Added SQL Upload Support (Not tested)

--- a/EasyMap.Gui/EasyMap.Gui.csproj
+++ b/EasyMap.Gui/EasyMap.Gui.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="FrmTask.cs" />
     <Compile Update="FrmRunner.cs">
       <SubType>Form</SubType>
     </Compile>
