--- a/EasyMap.Console/EasyMap.Console.csproj
+++ b/EasyMap.Console/EasyMap.Console.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Authors>Ahmad N. Chatila</Authors>
+    <Version>1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
