--- a/EasyMap.Gui/Properties/Settings.settings
+++ b/EasyMap.Gui/Properties/Settings.settings
@@ -21,7 +21,10 @@
       <Value Profile="(Default)">150</Value>
     </Setting>
     <Setting Name="FrmMainCommentColWidth" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">100</Value>
+      <Value Profile="(Default)">120</Value>
+    </Setting>
+    <Setting Name="FrmMainDataTypeColWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">70</Value>
     </Setting>
   </Settings>
 </SettingsFile>
